# StockLens

./: .gitignore
backend/: app.py
sdk_python/: .gitignore  0.2.38  README.md  pyproject.toml  test_sdk.py  test_webhook.py
sdk_python/stocklens/: __init__.py  __main__.py  core.py  indicators.py  sentiment.py  storage.py  summarizer.py  tts.py
sdk_python/stocklens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sdk_python/venv-test/: pyvenv.cfg
sdk_python/venv-test/Scripts/: activate  activate.bat  pwiz.py
