[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocklens-sdk   "
version = "0.1.0"
description = "StockLens SDK: summarization, indicators, TTS, and sentiment utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "StockLens", email = "example@example.com" }
]
keywords = ["stocks", "nlp", "summarization", "finance", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "transformers>=4.40.0",
  "torch>=2.1.0",
  "gTTS>=2.5.1",
  "yfinance>=0.2.38",
  "pandas>=2.0.0",
  "requests>=2.31.0",
  "textblob>=0.18.0.post0",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.6.0"]

[project.urls]
Homepage = "https://example.com/stocklens"
Repository = "https://example.com/stocklens/repo"

[project.scripts]
stocklens-cli = "stocklens.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["stocklens*"]

